Fix regression bug 197823 -- scrolling state restoration broken during history navigation if URL includes anchor name.  Remove unnecessary and deleterious flush. r+sr=dbaron