content/html/document/src/nsHTMLContentSink.cpp
@@ -4344,7 +4344,9 @@ HTMLContentSink::ScrollToRef(PRBool aReallyScroll)
     mDocument->GetShellAt(i, getter_AddRefs(shell));
     if (shell) {
       // Scroll to the anchor
-      shell->FlushPendingNotifications(PR_FALSE);
+      if (aReallyScroll) {
+        shell->FlushPendingNotifications(PR_FALSE);
+      }
 
       // Check an empty string which might be caused by the UTF-8 conversion
       if (!ref.IsEmpty()) {
